--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         </div>
         <img src="images/next.png" id="nextbtn">
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
